create setting for determining whether first name variant is included in name queries

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -58,6 +58,7 @@ DOI:
 
 HARVESTER:
   USE_MIDDLE_NAME: true
+  USE_FIRST_INITIAL: false
   USE_AUTHOR_IDENTITIES: false
   INSTITUTION:
     name: Stanford University
