use symbolicTimeSpan for harvesting new and updated authors; add default timeframes to settings

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -60,6 +60,8 @@ DOI:
 HARVESTER:
   USE_MIDDLE_NAME: true
   USE_AUTHOR_IDENTITIES: false
+  UPDATE_TIMEFRAME: 4week # default WoS symbolicTimeSpan for updated authors/biweekly harvests
+  NEW_AUTHOR_TIMEFRAME: 52week # default WoS symbolicTimeSpan for new authors
   INSTITUTION:
     name: Stanford University
     address:
