--- a/config/settings.yml
+++ b/config/settings.yml
@@ -36,11 +36,10 @@ PUBMED:
 
 ## Sciencewire Auth Config
 SCIENCEWIRE:
-  enabled: true
+  enabled: false
   LOG: log/sciencewire.log
   BASE_URI: https://sciencewirerest.discoverylogic.com
   HOST: stg.sciencewirerest.discoverylogic.com
-  LICENSE_ID: some-license-id
   RECOMMENDATION_PATH: /PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
   TMPDIR: /tmp
   ARTICLE_BASE_URI: https://ws.isiknowledge.com/cps/openurl/service?url_ver=Z39.88-2004&rft_id=info:ut/
