make regular harvests in prod more frequent and shorten lookback window for harvests

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -53,7 +53,7 @@ WOS:
   AUTH_CODE: secret
   LOG: log/web_of_science.log
   LOG_LEVEL: warn
-  regular_harvest_timeframe: 8week # default WoS symbolicTimeSpan for biweekly harvests
+  regular_harvest_timeframe: 3week # default WoS symbolicTimeSpan for regular harvests
   update_timeframe: 10year # default WoS symbolicTimeSpan for updated authors resulting from nightly cap polling
   new_author_timeframe: null # default WoS symbolicTimeSpan for new authors resulting from nightly cap polling (null == for all time)
   # note, see lib/web_of_science/query_author.rb#author_query
