--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-- 2.3.4
-- 2.4.1
+- 2.3.4 # deployed
+- 2.5.3
 services: mysql
 before_script:
 - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
