update vcr_cassettes to include new expected Pubmed URL with api key

--- a/fixtures/vcr_cassettes/PubmedHarvester/_fetch_remote_pubmed/WOS_and_ScienceWire_both_disabled/searches_only_pubmed.yml
+++ b/fixtures/vcr_cassettes/PubmedHarvester/_fetch_remote_pubmed/WOS_and_ScienceWire_both_disabled/searches_only_pubmed.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?api_key=a_fake_pubmed_key&db=pubmed&retmode=xml
     body:
       encoding: UTF-8
       string: "&id=24930130"
