--- a/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/does_not_do_any_filtering_with_a_resultset_of_2_manual/batch_pubs.yml
+++ b/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/does_not_do_any_filtering_with_a_resultset_of_2_manual/batch_pubs.yml
@@ -78,7 +78,7 @@ http_interactions:
   recorded_at: Mon, 13 Nov 2017 20:58:04 GMT
 - request:
     method: post
-    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?api_key=a_fake_pubmed_key&db=pubmed&retmode=xml
     body:
       encoding: UTF-8
       string: "&id=99999999"
