--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/for_valid_author/calls_write_counts_to_log.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/for_valid_author/calls_write_counts_to_log.yml
@@ -2076,7 +2076,7 @@ http_interactions:
   recorded_at: Mon, 13 Nov 2017 20:58:19 GMT
 - request:
     method: post
-    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?api_key=a_fake_pubmed_key&db=pubmed&retmode=xml
     body:
       encoding: UTF-8
       string: "&id=21975722&id=21134139&id=20386227&id=20046456&id=19088623&id=16517323&id=14617124&id=17377083"
