--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_sw_pubs_by_wos_id_for_author/creates_ScienceWire_Publications_with_an_array_of_WebOfScience_IDs_for_a_given_author.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_sw_pubs_by_wos_id_for_author/creates_ScienceWire_Publications_with_an_array_of_WebOfScience_IDs_for_a_given_author.yml
@@ -244,7 +244,7 @@ http_interactions:
   recorded_at: Mon, 13 Nov 2017 20:58:07 GMT
 - request:
     method: post
-    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?api_key=a_fake_pubmed_key&db=pubmed&retmode=xml
     body:
       encoding: UTF-8
       string: "&id=23565139&id=23540906&id=23635172"
