--- a/fixtures/vcr_cassettes/SulBib_API/POST_/authorship/success/with_sul_author_id/behaves_like_it_creates_new_contributions_and_publications/for_a_new_PubMed_publication/adds_new_publication.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/POST_/authorship/success/with_sul_author_id/behaves_like_it_creates_new_contributions_and_publications/for_a_new_PubMed_publication/adds_new_publication.yml
@@ -186,7 +186,7 @@ http_interactions:
   recorded_at: Mon, 13 Nov 2017 20:58:44 GMT
 - request:
     method: post
-    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?api_key=a_fake_pubmed_key&db=pubmed&retmode=xml
     body:
       encoding: UTF-8
       string: "&id=&id=23684686"
