--- a/fixtures/vcr_cassettes/pub_med_client_spec_returns_a_list.yml
+++ b/fixtures/vcr_cassettes/pub_med_client_spec_returns_a_list.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?api_key=a_fake_pubmed_key&db=pubmed&retmode=xml
     body:
       encoding: UTF-8
       string: "&id=211&id=589&id=591&id=960"
@@ -812,6 +812,6 @@ http_interactions:
         </PubmedArticle>
 
         </PubmedArticleSet>
-    http_version: 
+    http_version:
   recorded_at: Mon, 13 Nov 2017 20:57:38 GMT
 recorded_with: VCR 3.0.1
