Drop dlss-cops gem.
It's not up to date and not used in other infrastructure projects

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,6 @@
-inherit_gem:
-  dlss_cops: "config/dlss_baseline.yml"
-
 inherit_from:
   - .rubocop_todo.yml
+require: rubocop-rspec
 
 AllCops:
   TargetRubyVersion: 2.2
