--- a/config/settings.yml
+++ b/config/settings.yml
@@ -30,9 +30,14 @@ CAP:
 PUBMED:
   LOG: log/pubmed.log
   FETCH_PATH: /entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+  SEARCH_PATH: /entrez/eutils/esearch.fcgi?db=pubmed&retmode=xml&retmax=100000
   API_KEY: a_fake_pubmed_key
   BASE_URI: https://eutils.ncbi.nlm.nih.gov
   ARTICLE_BASE_URI: https://www.ncbi.nlm.nih.gov/pubmed/
+  # In number of days
+  regular_harvest_timeframe: 21
+  update_timeframe: null # default pubmed reldate for updated authors resulting from nightly cap polling
+  new_author_timeframe: null # default pubmed reldate for new authors resulting from nightly cap polling (null == for all time)
 
 ## Sciencewire Auth Config
 SCIENCEWIRE:
