--- a/fixtures/vcr_cassettes/Pubmed_Client/_search/returns_a_smaller_list.yml
+++ b/fixtures/vcr_cassettes/Pubmed_Client/_search/returns_a_smaller_list.yml
@@ -69,4 +69,73 @@ http_interactions:
         R[Author] AND 2018/12/25[EDAT] : 2019/03/25[EDAT]</QueryTranslation>\n\n</eSearchResult>\n"
     http_version: 
   recorded_at: Mon, 25 Mar 2019 12:38:09 GMT
+- request:
+    method: post
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi?api_key=Settings.PUBMED.API_KEY&datetype=edat&db=pubmed&reldate=90&retmax=100000&retmode=xml
+    body:
+      encoding: UTF-8
+      string: term=Altman R[author]
+    headers:
+      User-Agent:
+      - stanford-library-sul-pub
+      Accept:
+      - "*/*"
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Fri, 05 Apr 2019 17:22:17 GMT
+      Content-Type:
+      - application/x-www-form-urlencoded
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 05 Apr 2019 17:22:17 GMT
+      Server:
+      - Finatra
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
+      X-Ratelimit-Remaining:
+      - '9'
+      Ncbi-Phid:
+      - 322C43FE71CC1545000013123BF6655F.1.1.m_1
+      Cache-Control:
+      - private
+      L5d-Success-Class:
+      - '1.0'
+      Ncbi-Sid:
+      - 5B9EE80A5CFDEE4F_B9A3SID
+      Content-Encoding:
+      - gzip
+      X-Ratelimit-Limit:
+      - '10'
+      Access-Control-Allow-Origin:
+      - "*"
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Set-Cookie:
+      - ncbi_sid=5B9EE80A5CFDEE4F_B9A3SID; domain=.nih.gov; path=/; expires=Sun, 05
+        Apr 2020 17:22:18 GMT
+      X-Ua-Compatible:
+      - IE=Edge
+      X-Xss-Protection:
+      - 1; mode=block
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\n<!DOCTYPE eSearchResult
+        PUBLIC \"-//NLM//DTD esearch 20060628//EN\" \"https://eutils.ncbi.nlm.nih.gov/eutils/dtd/20060628/esearch.dtd\">\n<eSearchResult>\n<Count>8</Count><RetMax>8</RetMax><RetStart>0</RetStart>\n<IdList>\n\t<Id>30936730</Id>\n\t<Id>30833575</Id>\n\t<Id>30804076</Id>\n\t<Id>30804075</Id>\n\t<Id>30773618</Id>\n\t<Id>30672837</Id>\n\t<Id>30632749</Id>\n\t<Id>30610379</Id>\n</IdList>\n<TranslationSet/><TranslationStack>
+        \  <TermSet>    <Term>Altman R[Author]</Term>    <Field>Author</Field>    <Count>1141</Count>
+        \   <Explode>N</Explode>   </TermSet>   <TermSet>    <Term>2019/01/05[EDAT]</Term>
+        \   <Field>EDAT</Field>    <Count>0</Count>    <Explode>N</Explode>   </TermSet>
+        \  <TermSet>    <Term>2019/04/05[EDAT]</Term>    <Field>EDAT</Field>    <Count>0</Count>
+        \   <Explode>N</Explode>   </TermSet>   <OP>RANGE</OP>   <OP>AND</OP>  </TranslationStack><QueryTranslation>Altman
+        R[Author] AND 2019/01/05[EDAT] : 2019/04/05[EDAT]</QueryTranslation>\n\n</eSearchResult>\n"
+    http_version: 
+  recorded_at: Fri, 05 Apr 2019 17:22:18 GMT
 recorded_with: VCR 4.0.0
