--- a/fixtures/vcr_cassettes/PubmedSourceRecord/_get_pubmed_record_from_pubmed/returns_an_instance_of_PubmedSourceRecord.yml
+++ b/fixtures/vcr_cassettes/PubmedSourceRecord/_get_pubmed_record_from_pubmed/returns_an_instance_of_PubmedSourceRecord.yml
@@ -151,4 +151,156 @@ http_interactions:
         </PubmedArticleSet>
     http_version: 
   recorded_at: Mon, 13 Nov 2017 20:57:52 GMT
-recorded_with: VCR 3.0.1
+- request:
+    method: post
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?api_key=Settings.PUBMED.API_KEY&db=pubmed&retmode=xml
+    body:
+      encoding: UTF-8
+      string: "&id=&id=10000166"
+    headers:
+      User-Agent:
+      - stanford-library-sul-pub
+      Accept:
+      - "*/*"
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Fri, 05 Apr 2019 17:28:25 GMT
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Cookie:
+      - ncbi_sid=3555940AC9A60B13_ADA5SID
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 05 Apr 2019 17:28:25 GMT
+      Server:
+      - Finatra
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
+      X-Ratelimit-Remaining:
+      - '7'
+      Ncbi-Phid:
+      - 322C43FE71CC154500002813B4EE494D.1.1.m_3
+      Cache-Control:
+      - private
+      L5d-Success-Class:
+      - '1.0'
+      Ncbi-Sid:
+      - 3555940AC9A60B13_ADA5SID
+      Content-Encoding:
+      - gzip
+      X-Ratelimit-Limit:
+      - '10'
+      Access-Control-Allow-Origin:
+      - "*"
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Set-Cookie:
+      - ncbi_sid=3555940AC9A60B13_ADA5SID; domain=.nih.gov; path=/; expires=Sun, 05
+        Apr 2020 17:28:25 GMT
+      X-Ua-Compatible:
+      - IE=Edge
+      X-Xss-Protection:
+      - 1; mode=block
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: |-
+        <?xml version="1.0" ?>
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2019//EN" "https://dtd.nlm.nih.gov/ncbi/pubmed/out/pubmed_190101.dtd">
+        <PubmedArticleSet>
+        <PubmedArticle>
+            <MedlineCitation Status="Publisher" Owner="NLM">
+                <PMID Version="1">10000166</PMID>
+                <DateRevised>
+                    <Year>1999</Year>
+                    <Month>02</Month>
+                    <Day>17</Day>
+                </DateRevised>
+                <Article PubModel="Print">
+                    <Journal>
+                        <ISSN IssnType="Print">0163-1829</ISSN>
+                        <JournalIssue CitedMedium="Print">
+                            <Volume>45</Volume>
+                            <Issue>1</Issue>
+                            <PubDate>
+                                <Year>1992</Year>
+                                <Month>Jan</Month>
+                                <Day>01</Day>
+                            </PubDate>
+                        </JournalIssue>
+                        <Title>Physical review. B, Condensed matter</Title>
+                        <ISOAbbreviation>Phys. Rev., B Condens. Matter</ISOAbbreviation>
+                    </Journal>
+                    <ArticleTitle>Fluid permeability in porous media: Comparison of electrical estimates with hydrodynamical calculations.</ArticleTitle>
+                    <Pagination>
+                        <MedlinePgn>186-195</MedlinePgn>
+                    </Pagination>
+                    <AuthorList CompleteYN="Y">
+                        <Author ValidYN="Y">
+                            <LastName>Kostek</LastName>
+                            <Initials>S</Initials>
+                        </Author>
+                        <Author ValidYN="Y">
+                            <LastName>Schwartz</LastName>
+                            <Initials>LM</Initials>
+                        </Author>
+                        <Author ValidYN="Y">
+                            <LastName>Johnson</LastName>
+                            <Initials>DL</Initials>
+                        </Author>
+                    </AuthorList>
+                    <Language>eng</Language>
+                    <PublicationTypeList>
+                        <PublicationType UI="D016428">Journal Article</PublicationType>
+                    </PublicationTypeList>
+                </Article>
+                <MedlineJournalInfo>
+                    <Country>United States</Country>
+                    <MedlineTA>Phys Rev B Condens Matter</MedlineTA>
+                    <NlmUniqueID>9878217</NlmUniqueID>
+                    <ISSNLinking>0163-1829</ISSNLinking>
+                </MedlineJournalInfo>
+            </MedlineCitation>
+            <PubmedData>
+                <History>
+                    <PubMedPubDate PubStatus="pubmed">
+                        <Year>1992</Year>
+                        <Month>1</Month>
+                        <Day>1</Day>
+                        <Hour>0</Hour>
+                        <Minute>0</Minute>
+                    </PubMedPubDate>
+                    <PubMedPubDate PubStatus="medline">
+                        <Year>1999</Year>
+                        <Month>2</Month>
+                        <Day>19</Day>
+                        <Hour>0</Hour>
+                        <Minute>0</Minute>
+                    </PubMedPubDate>
+                    <PubMedPubDate PubStatus="entrez">
+                        <Year>1992</Year>
+                        <Month>1</Month>
+                        <Day>1</Day>
+                        <Hour>0</Hour>
+                        <Minute>0</Minute>
+                    </PubMedPubDate>
+                </History>
+                <PublicationStatus>ppublish</PublicationStatus>
+                <ArticleIdList>
+                    <ArticleId IdType="pubmed">10000166</ArticleId>
+                </ArticleIdList>
+            </PubmedData>
+        </PubmedArticle>
+
+        </PubmedArticleSet>
+    http_version: 
+  recorded_at: Fri, 05 Apr 2019 17:28:25 GMT
+recorded_with: VCR 4.0.0
