--- a/fixtures/vcr_cassettes/Pubmed_QueryAuthor/_pmids/returns_a_smaller_list.yml
+++ b/fixtures/vcr_cassettes/Pubmed_QueryAuthor/_pmids/returns_a_smaller_list.yml
@@ -76,4 +76,86 @@ http_interactions:
         AND 2018/12/25[EDAT] : 2019/03/25[EDAT]</QueryTranslation>\n\n</eSearchResult>\n"
     http_version: 
   recorded_at: Mon, 25 Mar 2019 12:33:23 GMT
+- request:
+    method: post
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi?api_key=Settings.PUBMED.API_KEY&datetype=edat&db=pubmed&reldate=90&retmax=100000&retmode=xml
+    body:
+      encoding: UTF-8
+      string: term=((Altman Russ[Author]) OR (Altman R[Author])) AND (Stanford University[Affiliation])
+    headers:
+      User-Agent:
+      - stanford-library-sul-pub
+      Accept:
+      - "*/*"
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Fri, 05 Apr 2019 17:29:58 GMT
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Cookie:
+      - ncbi_sid=419BD45899269084_D138SID
+      Content-Length:
+      - '89'
+      Host:
+      - eutils.ncbi.nlm.nih.gov
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 05 Apr 2019 17:29:57 GMT
+      Server:
+      - Finatra
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
+      X-Ratelimit-Remaining:
+      - '9'
+      Ncbi-Phid:
+      - 322C43FE71CC1545000024140D5907E4.1.1.m_1
+      Cache-Control:
+      - private
+      L5d-Success-Class:
+      - '1.0'
+      Ncbi-Sid:
+      - 419BD45899269084_D138SID
+      Content-Encoding:
+      - gzip
+      X-Ratelimit-Limit:
+      - '10'
+      Access-Control-Allow-Origin:
+      - "*"
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Set-Cookie:
+      - ncbi_sid=419BD45899269084_D138SID; domain=.nih.gov; path=/; expires=Sun, 05
+        Apr 2020 17:29:58 GMT
+      X-Ua-Compatible:
+      - IE=Edge
+      X-Xss-Protection:
+      - 1; mode=block
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\n<!DOCTYPE eSearchResult
+        PUBLIC \"-//NLM//DTD esearch 20060628//EN\" \"https://eutils.ncbi.nlm.nih.gov/eutils/dtd/20060628/esearch.dtd\">\n<eSearchResult>\n<Count>4</Count><RetMax>4</RetMax><RetStart>0</RetStart>\n<IdList>\n\t<Id>30833575</Id>\n\t<Id>30773618</Id>\n\t<Id>30672837</Id>\n\t<Id>30610379</Id>\n</IdList>\n<TranslationSet><Translation>
+        \    <From>Altman Russ[Author]</From>     <To>Altman, Russ[Full Author Name]</To>
+        \   </Translation></TranslationSet><TranslationStack>   <TermSet>    <Term>Altman,
+        Russ[Full Author Name]</Term>    <Field>Full Author Name</Field>    <Count>339</Count>
+        \   <Explode>N</Explode>   </TermSet>   <TermSet>    <Term>Altman R[Author]</Term>
+        \   <Field>Author</Field>    <Count>1141</Count>    <Explode>N</Explode>   </TermSet>
+        \  <OP>OR</OP>   <OP>GROUP</OP>   <TermSet>    <Term>Stanford University[Affiliation]</Term>
+        \   <Field>Affiliation</Field>    <Count>85343</Count>    <Explode>N</Explode>
+        \  </TermSet>   <OP>AND</OP>   <TermSet>    <Term>2019/01/05[EDAT]</Term>
+        \   <Field>EDAT</Field>    <Count>0</Count>    <Explode>N</Explode>   </TermSet>
+        \  <TermSet>    <Term>2019/04/05[EDAT]</Term>    <Field>EDAT</Field>    <Count>0</Count>
+        \   <Explode>N</Explode>   </TermSet>   <OP>RANGE</OP>   <OP>AND</OP>  </TranslationStack><QueryTranslation>(Altman,
+        Russ[Full Author Name] OR Altman R[Author]) AND Stanford University[Affiliation]
+        AND 2019/01/05[EDAT] : 2019/04/05[EDAT]</QueryTranslation>\n\n</eSearchResult>\n"
+    http_version: 
+  recorded_at: Fri, 05 Apr 2019 17:29:58 GMT
 recorded_with: VCR 4.0.0
