--- a/fixtures/vcr_cassettes/WebOfScience_ProcessRecords/with_WOS_records/behaves_like_execute/creates_new_WebOfScienceSourceRecords_Publications_PublicationIdentifiers_Contributions.yml
+++ b/fixtures/vcr_cassettes/WebOfScience_ProcessRecords/with_WOS_records/behaves_like_execute/creates_new_WebOfScienceSourceRecords_Publications_PublicationIdentifiers_Contributions.yml
@@ -198,4 +198,210 @@ http_interactions:
         </PubmedArticleSet>
     http_version: 
   recorded_at: Tue, 06 Mar 2018 02:04:48 GMT
+- request:
+    method: post
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?api_key=Settings.PUBMED.API_KEY&db=pubmed&retmode=xml
+    body:
+      encoding: UTF-8
+      string: "&id=&id=21253920"
+    headers:
+      User-Agent:
+      - stanford-library-sul-pub
+      Accept:
+      - "*/*"
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Fri, 05 Apr 2019 17:29:47 GMT
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Cookie:
+      - ncbi_sid=419BD45899269084_D138SID
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 05 Apr 2019 17:29:47 GMT
+      Server:
+      - Finatra
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
+      X-Ratelimit-Remaining:
+      - '8'
+      Ncbi-Phid:
+      - 939B43EE851642750000230F5C5D8334.1.1.m_3
+      Cache-Control:
+      - private
+      L5d-Success-Class:
+      - '1.0'
+      Ncbi-Sid:
+      - 419BD45899269084_D138SID
+      Content-Encoding:
+      - gzip
+      X-Ratelimit-Limit:
+      - '10'
+      Access-Control-Allow-Origin:
+      - "*"
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Set-Cookie:
+      - ncbi_sid=419BD45899269084_D138SID; domain=.nih.gov; path=/; expires=Sun, 05
+        Apr 2020 17:29:47 GMT
+      X-Ua-Compatible:
+      - IE=Edge
+      X-Xss-Protection:
+      - 1; mode=block
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: |-
+        <?xml version="1.0" ?>
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2019//EN" "https://dtd.nlm.nih.gov/ncbi/pubmed/out/pubmed_190101.dtd">
+        <PubmedArticleSet>
+        <PubmedArticle>
+            <MedlineCitation Status="MEDLINE" Owner="NLM">
+                <PMID Version="1">21253920</PMID>
+                <DateCompleted>
+                    <Year>2011</Year>
+                    <Month>08</Month>
+                    <Day>01</Day>
+                </DateCompleted>
+                <DateRevised>
+                    <Year>2011</Year>
+                    <Month>03</Month>
+                    <Day>22</Day>
+                </DateRevised>
+                <Article PubModel="Print-Electronic">
+                    <Journal>
+                        <ISSN IssnType="Electronic">1496-8975</ISSN>
+                        <JournalIssue CitedMedium="Internet">
+                            <Volume>58</Volume>
+                            <Issue>4</Issue>
+                            <PubDate>
+                                <Year>2011</Year>
+                                <Month>Apr</Month>
+                            </PubDate>
+                        </JournalIssue>
+                        <Title>Canadian journal of anaesthesia = Journal canadien d'anesthesie</Title>
+                        <ISOAbbreviation>Can J Anaesth</ISOAbbreviation>
+                    </Journal>
+                    <ArticleTitle>Kinked Perifix® FX Springwound epidural catheters.</ArticleTitle>
+                    <Pagination>
+                        <MedlinePgn>413-4</MedlinePgn>
+                    </Pagination>
+                    <ELocationID EIdType="doi" ValidYN="Y">10.1007/s12630-011-9462-1</ELocationID>
+                    <AuthorList CompleteYN="Y">
+                        <Author ValidYN="Y">
+                            <LastName>Hilton</LastName>
+                            <ForeName>Gillian</ForeName>
+                            <Initials>G</Initials>
+                        </Author>
+                        <Author ValidYN="Y">
+                            <LastName>Jette</LastName>
+                            <ForeName>Christine G</ForeName>
+                            <Initials>CG</Initials>
+                        </Author>
+                        <Author ValidYN="Y">
+                            <LastName>Ouyang</LastName>
+                            <ForeName>Yi-Bing</ForeName>
+                            <Initials>YB</Initials>
+                        </Author>
+                        <Author ValidYN="Y">
+                            <LastName>Riley</LastName>
+                            <ForeName>Edward T</ForeName>
+                            <Initials>ET</Initials>
+                        </Author>
+                    </AuthorList>
+                    <Language>eng</Language>
+                    <PublicationTypeList>
+                        <PublicationType UI="D016422">Letter</PublicationType>
+                        <PublicationType UI="D013485">Research Support, Non-U.S. Gov't</PublicationType>
+                    </PublicationTypeList>
+                    <ArticleDate DateType="Electronic">
+                        <Year>2011</Year>
+                        <Month>01</Month>
+                        <Day>21</Day>
+                    </ArticleDate>
+                </Article>
+                <MedlineJournalInfo>
+                    <Country>United States</Country>
+                    <MedlineTA>Can J Anaesth</MedlineTA>
+                    <NlmUniqueID>8701709</NlmUniqueID>
+                    <ISSNLinking>0832-610X</ISSNLinking>
+                </MedlineJournalInfo>
+                <CitationSubset>IM</CitationSubset>
+                <MeshHeadingList>
+                    <MeshHeading>
+                        <DescriptorName UI="D000767" MajorTopicYN="N">Anesthesia, Epidural</DescriptorName>
+                        <QualifierName UI="Q000295" MajorTopicYN="Y">instrumentation</QualifierName>
+                    </MeshHeading>
+                    <MeshHeading>
+                        <DescriptorName UI="D000773" MajorTopicYN="N">Anesthesia, Obstetrical</DescriptorName>
+                        <QualifierName UI="Q000295" MajorTopicYN="Y">instrumentation</QualifierName>
+                    </MeshHeading>
+                    <MeshHeading>
+                        <DescriptorName UI="D002404" MajorTopicYN="N">Catheterization</DescriptorName>
+                        <QualifierName UI="Q000295" MajorTopicYN="Y">instrumentation</QualifierName>
+                    </MeshHeading>
+                    <MeshHeading>
+                        <DescriptorName UI="D005260" MajorTopicYN="N">Female</DescriptorName>
+                    </MeshHeading>
+                    <MeshHeading>
+                        <DescriptorName UI="D006801" MajorTopicYN="N">Humans</DescriptorName>
+                    </MeshHeading>
+                    <MeshHeading>
+                        <DescriptorName UI="D011247" MajorTopicYN="N">Pregnancy</DescriptorName>
+                    </MeshHeading>
+                </MeshHeadingList>
+            </MedlineCitation>
+            <PubmedData>
+                <History>
+                    <PubMedPubDate PubStatus="received">
+                        <Year>2010</Year>
+                        <Month>12</Month>
+                        <Day>09</Day>
+                    </PubMedPubDate>
+                    <PubMedPubDate PubStatus="accepted">
+                        <Year>2011</Year>
+                        <Month>01</Month>
+                        <Day>10</Day>
+                    </PubMedPubDate>
+                    <PubMedPubDate PubStatus="entrez">
+                        <Year>2011</Year>
+                        <Month>1</Month>
+                        <Day>22</Day>
+                        <Hour>6</Hour>
+                        <Minute>0</Minute>
+                    </PubMedPubDate>
+                    <PubMedPubDate PubStatus="pubmed">
+                        <Year>2011</Year>
+                        <Month>1</Month>
+                        <Day>22</Day>
+                        <Hour>6</Hour>
+                        <Minute>0</Minute>
+                    </PubMedPubDate>
+                    <PubMedPubDate PubStatus="medline">
+                        <Year>2011</Year>
+                        <Month>8</Month>
+                        <Day>2</Day>
+                        <Hour>6</Hour>
+                        <Minute>0</Minute>
+                    </PubMedPubDate>
+                </History>
+                <PublicationStatus>ppublish</PublicationStatus>
+                <ArticleIdList>
+                    <ArticleId IdType="pubmed">21253920</ArticleId>
+                    <ArticleId IdType="doi">10.1007/s12630-011-9462-1</ArticleId>
+                </ArticleIdList>
+            </PubmedData>
+        </PubmedArticle>
+
+        </PubmedArticleSet>
+    http_version: 
+  recorded_at: Fri, 05 Apr 2019 17:29:47 GMT
 recorded_with: VCR 4.0.0
